--- a/Exc4/ZadDom4.tex
+++ b/Exc4/ZadDom4.tex
@@ -5,10 +5,15 @@
 \usepackage{amsmath}
 \usepackage{pgfplots}
 \usepackage{tikz}
+\usepackage[margin=1in]{geometry}
+\usepackage{pdfpages}
+\usepackage{forloop}
 
 \title{Zadanie domowe 4}
 \author{Nel Skowronek}
 \date{\today}
+
+\newcounter{pagecounter}
 
 \begin{document}
 
@@ -28,33 +33,46 @@ Aby móc zastosować obie nierówności do obu prawdopodobieństw, trzeba skoży
 \end{itemize}
 
 Wyniki przybliżeń oraz dokładne wartości prawdopodobieństw:
-\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc1.png}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.5]{./plots/exc1.png}
+\end{figure}
 
 Jak widać, obie nierówności zostawiają wiele do życzenia, jednak nierówność Czebyszewa jest zdecydowanie dokładniejsza.
-Daje bliższe wyniki, oraz zależy od \text{n}, co nie ma miejsca w nierówności Markowa w tych przypadkach.\\
+Daje bliższe wyniki, oraz zależy od \( n \), co nie ma miejsca w nierówności Markowa w tych przypadkach.\\
 
 \section*{Zadanie 2: Błądzenie losowe na liczbach całkowitych}
 
-W celu ułatwienia zadania należy zauważyć, że zmienna \( S_N \) jest transformacją liniową rozkładu \( Bin\left(N, \frac{1}{2}\right) \).
+W celu ułatwienia zadania należy zauważyć, że zmienna \( S_N \) jest transformacją liniową rozkładu \( \text{Bin}\left(N, \frac{1}{2}\right) \).
 Dokładniej: \\
-\( S_N = 2 * Bin\left(n, \frac{1}{2}\right) - N \)\\
+\( S_N = 2 \cdot \text{Bin}\left(n, \frac{1}{2}\right) - N \)\\
 A więc: \\
-\( F_{S_N}\left(t\right) = P\left(S_N \leq t\right) = P\left(2 * Bin\left(n, \frac{1}{2}\right) - N \leq t\right) = P\left(Bin\left(n, \frac{1}{2}\right) \leq \frac{t + N}{2}\right) \)\\
-Wystarczy więc wyznaczyć dystrybuantę \( Bin\left(N, \frac{1}{2}\right) \) i odpowiednio przeskalować pod nią oś \text{OX}.
+\( F_{S_N}\left(t\right) = P\left(S_N \leq t\right) = P\left(2 \cdot \text{Bin}\left(n, \frac{1}{2}\right) - N \leq t\right) = P\left(\text{Bin}\left(n, \frac{1}{2}\right) \leq \frac{t + N}{2}\right) \)\\
+Wystarczy więc wyznaczyć dystrybuantę \( \text{Bin}\left(N, \frac{1}{2}\right) \) i odpowiednio przeskalować pod nią oś \text{OX}.
 
-Wykresy dystrybuant \( S_N \) oraz przybliżających ich rozkładów normalnych \( \mathcal{N}\left(E\left(S_N\right), \sqrt{var\left(S_N\right)}\right) \):
-\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc2.pdf}
+Wykresy dystrybuant \( S_N \) oraz przybliżających ich rozkładów normalnych \( \mathcal{N}\left(E\left(S_N\right), \sqrt{\text{var}\left(S_N\right)}\right) \):
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.5]{./plots/exc2.pdf}
+    \caption{Wykresy dystrybuant \( S_N \) oraz przybliżających ich rozkładów normalnych}
+\end{figure}
 
-Wyraźnie widać że razem z rosnącym \( N \), \( S_N \) zbiega według rozkładu do \( \mathcal{N}\left(E\left(S_N\right), var\left(S_N\right)\right) \)\\
+Wyraźnie widać że razem z rosnącym \( N \), \( S_N \) zbiega według rozkładu do \( \mathcal{N}\left(E\left(S_N\right), \text{var}\left(S_N\right)\right) \)\\
 co jest zgodne z \textbf{CLT}. \\
 
-\section*{Zadanie 3: Błądzenie losowe na \mathbb{Z} - rozkład \textit{„czasu spędzonego nad osią OX”}}
+\section*{Zadanie 3: Błądzenie losowe na \(\mathbb{Z}\) - rozkład \textit{„czasu spędzonego nad osią OX”}}
 
 Wyniki przeprowadzonych symulacji:
-\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc3.pdf}
+\newcounter{page}
+\forloop{page}{1}{\value{page} < \pdfximage{./plots/exc3.pdf}\pdflastximagepages+1}{%
+    \includepdf[pages=\value{page}]{./plots/exc3.pdf}
+}
 
 Dla porównania - funkcja gęstości rozkładu z zadania 5 listy 8 \( \mathcal{f}_X\left(x\right) = \frac{1}{\pi\sqrt{x - x^2}} \):
-\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc3-arcsin.pdf}
+\newcounter{page2}
+\forloop{page2}{1}{\value{page2} < \pdfximage{./plots/exc3-arcsin.pdf}\pdflastximagepages+1}{%
+    \includepdf[pages=\value{page2}]{./plots/exc3-arcsin.pdf}
+}
 
 Widać mocne podobieństwo pomiędzy wykresami, co sugerowałoby dążenie rozkładu \( P_N \) do rozkładu arcusa sinusa z zadania 5.
 Jedną z rzeczy, które najmocniej rzucają się w oczy jest jednak tendencja do przyjmowania przez \( P_N \) granicznych wartości (0 lub 1).
