--- a/Exc4/ZadDom4.tex
+++ b/Exc4/ZadDom4.tex
@@ -6,14 +6,10 @@
 \usepackage{pgfplots}
 \usepackage{tikz}
 \usepackage[margin=1in]{geometry}
-\usepackage{pdfpages}
-\usepackage{forloop}
 
 \title{Zadanie domowe 4}
 \author{Nel Skowronek}
 \date{\today}
-
-\newcounter{pagecounter}
 
 \begin{document}
 
@@ -32,14 +28,11 @@ Aby móc zastosować obie nierówności do obu prawdopodobieństw, trzeba skoży
     \item \( P\left(\left|X - \mathbb{E}(X) \right| \geq \frac{1}{10} \cdot \mathbb{E}(X) \right) = 2P\left(X - \mathbb{E}(X) \geq \frac{1}{10} \cdot \mathbb{E}(X) \right) = 2P\left(X \geq \frac{11}{10} \cdot \mathbb{E}(X) \right) \)
 \end{itemize}
 
-Wyniki przybliżeń oraz dokładne wartości prawdopodobieństw:
-\begin{figure}[h!]
-    \centering
-    \includegraphics[scale=0.5]{./plots/exc1.png}
-\end{figure}
+Wyniki przybliżeń oraz dokładne wartości prawdopodobieństw:\\
+\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc1.png}
 
 Jak widać, obie nierówności zostawiają wiele do życzenia, jednak nierówność Czebyszewa jest zdecydowanie dokładniejsza.
-Daje bliższe wyniki, oraz zależy od \( n \), co nie ma miejsca w nierówności Markowa w tych przypadkach.\\
+Daje bliższe wyniki, oraz zależy od \( N \), co nie ma miejsca w nierówności Markowa w tych przypadkach.\\
 
 \section*{Zadanie 2: Błądzenie losowe na liczbach całkowitych}
 
@@ -51,28 +44,18 @@ A więc: \\
 Wystarczy więc wyznaczyć dystrybuantę \( \text{Bin}\left(N, \frac{1}{2}\right) \) i odpowiednio przeskalować pod nią oś \text{OX}.
 
 Wykresy dystrybuant \( S_N \) oraz przybliżających ich rozkładów normalnych \( \mathcal{N}\left(E\left(S_N\right), \sqrt{\text{var}\left(S_N\right)}\right) \):
-\begin{figure}[h!]
-    \centering
-    \includegraphics[scale=0.5]{./plots/exc2.pdf}
-    \caption{Wykresy dystrybuant \( S_N \) oraz przybliżających ich rozkładów normalnych}
-\end{figure}
+\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc2.pdf}
 
 Wyraźnie widać że razem z rosnącym \( N \), \( S_N \) zbiega według rozkładu do \( \mathcal{N}\left(E\left(S_N\right), \text{var}\left(S_N\right)\right) \)\\
 co jest zgodne z \textbf{CLT}. \\
 
 \section*{Zadanie 3: Błądzenie losowe na \(\mathbb{Z}\) - rozkład \textit{„czasu spędzonego nad osią OX”}}
 
-Wyniki przeprowadzonych symulacji:
-\newcounter{page}
-\forloop{page}{1}{\value{page} < \pdfximage{./plots/exc3.pdf}\pdflastximagepages+1}{%
-    \includepdf[pages=\value{page}]{./plots/exc3.pdf}
-}
+Wyniki przeprowadzonych symulacji:\\
+\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc3.pdf}
 
-Dla porównania - funkcja gęstości rozkładu z zadania 5 listy 8 \( \mathcal{f}_X\left(x\right) = \frac{1}{\pi\sqrt{x - x^2}} \):
-\newcounter{page2}
-\forloop{page2}{1}{\value{page2} < \pdfximage{./plots/exc3-arcsin.pdf}\pdflastximagepages+1}{%
-    \includepdf[pages=\value{page2}]{./plots/exc3-arcsin.pdf}
-}
+Dla porównania - funkcja gęstości rozkładu z zadania 5 listy 8 \( \mathcal{f}_X\left(x\right) = \frac{1}{\pi\sqrt{x - x^2}} \):\\
+\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc3-arcsin.pdf}
 
 Widać mocne podobieństwo pomiędzy wykresami, co sugerowałoby dążenie rozkładu \( P_N \) do rozkładu arcusa sinusa z zadania 5.
 Jedną z rzeczy, które najmocniej rzucają się w oczy jest jednak tendencja do przyjmowania przez \( P_N \) granicznych wartości (0 lub 1).
