--- a/Exc4/ZadDom4.tex
+++ b/Exc4/ZadDom4.tex
@@ -2,10 +2,14 @@
 \usepackage[utf8]{inputenc}  
 \usepackage[T1]{fontenc}     
 \usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{mathrsfs}
 \usepackage{pgfplots}
 \usepackage{tikz}
-\usepackage[margin=1in]{geometry}
+\usepackage[margin=1in, top=0.5in]{geometry}
+\pgfplotsset{compat=1.18}
 
 \title{Zadanie domowe 4}
 \author{Nel Skowronek}
@@ -15,24 +19,27 @@
 
 \maketitle
 
-\section*{Zadanie 1: Nierówności ogonowe dla rozkładu dwumianowego \text{Bin}\left(n, \frac{1}{2}\right)}
+\section*{Zadanie 1: Nierówności ogonowe dla rozkładu dwumianowego \(\text{Bin}\left(n, \frac{1}{2}\right)\)}
 
 Przybliżymy wartości następujących prawdopodobieństw za pomocą nierówności Markowa i Czebyszewa:
 \begin{itemize}
     \item \( P\left(X \geq \frac{6}{5} \cdot \mathbb{E}(X)\right) \)
     \item \( P\left(\left|X - \mathbb{E}(X)\right| \geq \frac{1}{10} \cdot \mathbb{E}(X) \right) \)
 \end{itemize}
-Aby móc zastosować obie nierówności do obu prawdopodobieństw, trzeba skożystać z faktu, że rozkład \text{Bin}\left(n, \frac{1}{2}\right) jest symetryczny:
+Aby móc zastosować obie nierówności do obu prawdopodobieństw, trzeba skożystać z faktu, że rozkład \(\text{Bin}\left(n, \frac{1}{2}\right)\) jest symetryczny:
 \begin{itemize}
     \item \( P\left(X \geq \frac{6}{5} \cdot \mathbb{E}(X)\right) = P\left(X - \mathbb{E}(X) \geq \frac{1}{5} \cdot \mathbb{E}(X)\right) = \frac{1}{2}P\left(\left|X - \mathbb{E}(X)\right| \geq \frac{1}{5} \cdot \mathbb{E}(X)\right) \)
     \item \( P\left(\left|X - \mathbb{E}(X) \right| \geq \frac{1}{10} \cdot \mathbb{E}(X) \right) = 2P\left(X - \mathbb{E}(X) \geq \frac{1}{10} \cdot \mathbb{E}(X) \right) = 2P\left(X \geq \frac{11}{10} \cdot \mathbb{E}(X) \right) \)
 \end{itemize}
 
 Wyniki przybliżeń oraz dokładne wartości prawdopodobieństw:\\
-\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc1.png}
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.5]{./plots/exc1.png}
+\end{figure}
 
 Jak widać, obie nierówności zostawiają wiele do życzenia, jednak nierówność Czebyszewa jest zdecydowanie dokładniejsza.
-Daje bliższe wyniki, oraz zależy od \( N \), co nie ma miejsca w nierówności Markowa w tych przypadkach.\\
+Daje bliższe wyniki, oraz zależy od \( n \), co nie ma miejsca w nierówności Markowa w tych przypadkach.\\
 
 \section*{Zadanie 2: Błądzenie losowe na liczbach całkowitych}
 
@@ -40,11 +47,43 @@ W celu ułatwienia zadania należy zauważyć, że zmienna \( S_N \) jest transf
 Dokładniej: \\
 \( S_N = 2 \cdot \text{Bin}\left(n, \frac{1}{2}\right) - N \)\\
 A więc: \\
-\( F_{S_N}\left(t\right) = P\left(S_N \leq t\right) = P\left(2 \cdot \text{Bin}\left(n, \frac{1}{2}\right) - N \leq t\right) = P\left(\text{Bin}\left(n, \frac{1}{2}\right) \leq \frac{t + N}{2}\right) \)\\
+\( F_{S_N}\left(t\right) = P\left(S_N \leq t\right) = P\left(2 \cdot \text{Bin}\left(n, \frac{1}{2}\right) - N \leq t\right) = P\left(\text{Bin}\left(n, \frac{1}{2}\right) \leq \frac{t + N}{2}\right) = F_{\text{Bin}\left(n, \frac{1}{2}\right)}\left(\frac{t + N}{2}\right) \)\\
 Wystarczy więc wyznaczyć dystrybuantę \( \text{Bin}\left(N, \frac{1}{2}\right) \) i odpowiednio przeskalować pod nią oś \text{OX}.
 
-Wykresy dystrybuant \( S_N \) oraz przybliżających ich rozkładów normalnych \( \mathcal{N}\left(E\left(S_N\right), \sqrt{\text{var}\left(S_N\right)}\right) \):
-\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc2.pdf}
+Wykresy dystrybuant \( S_N \) oraz przybliżających ich rozkładów normalnych \( \mathcal{N}\left(E\left(S_N\right), \sqrt{\text{var}\left(S_N\right)}\right) \):\\
+\begin{figure}[h!]
+    \centering
+    \begin{minipage}{0.45\textwidth}  % Adjust the width as needed
+        \centering
+        \includegraphics[scale=0.5]{./plots/exc2/n10.pdf}
+    \end{minipage}%
+    \begin{minipage}{0.45\textwidth}  % Adjust the width as needed
+        \centering
+        \includegraphics[scale=0.5]{./plots/exc2/n15.pdf}
+    \end{minipage}
+    
+    \vskip\baselineskip  % Optional vertical space between rows
+    
+    \begin{minipage}{0.45\textwidth}  % Adjust the width as needed
+        \centering
+        \includegraphics[scale=0.5]{./plots/exc2/n20.pdf}
+    \end{minipage}%
+    \begin{minipage}{0.45\textwidth}  % Adjust the width as needed
+        \centering
+        \includegraphics[scale=0.5]{./plots/exc2/n25.pdf}
+    \end{minipage}
+    
+    \vskip\baselineskip  % Optional vertical space between rows
+    
+    \begin{minipage}{0.45\textwidth}  % Adjust the width as needed
+        \centering
+        \includegraphics[scale=0.5]{./plots/exc2/n30.pdf}
+    \end{minipage}%
+    \begin{minipage}{0.45\textwidth}  % Adjust the width as needed
+        \centering
+        \includegraphics[scale=0.5]{./plots/exc2/n100.pdf}
+    \end{minipage}
+\end{figure}
 
 Wyraźnie widać że razem z rosnącym \( N \), \( S_N \) zbiega według rozkładu do \( \mathcal{N}\left(E\left(S_N\right), \text{var}\left(S_N\right)\right) \)\\
 co jest zgodne z \textbf{CLT}. \\
@@ -52,10 +91,27 @@ co jest zgodne z \textbf{CLT}. \\
 \section*{Zadanie 3: Błądzenie losowe na \(\mathbb{Z}\) - rozkład \textit{„czasu spędzonego nad osią OX”}}
 
 Wyniki przeprowadzonych symulacji:\\
-\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc3.pdf}
+\begin{figure}[h!]
+    \centering
+    \begin{minipage}{0.45\textwidth}  % Adjust the width as needed
+        \centering
+        \includegraphics[scale=0.5]{./plots/exc3/n100.pdf}
+    \end{minipage}%
+    \begin{minipage}{0.45\textwidth}  % Adjust the width as needed
+        \centering
+        \includegraphics[scale=0.5]{./plots/exc3/n1000.pdf}
+    \end{minipage}
+    \begin{minipage}{0.45\textwidth}  % Adjust the width as needed
+        \centering
+        \includegraphics[scale=0.5]{./plots/exc3/n10000.pdf}
+    \end{minipage}
+\end{figure}
 
-Dla porównania - funkcja gęstości rozkładu z zadania 5 listy 8 \( \mathcal{f}_X\left(x\right) = \frac{1}{\pi\sqrt{x - x^2}} \):\\
-\hspace*{-0cm} \includegraphics[scale=0.5]{./plots/exc3-arcsin.pdf}
+Dla porównania - funkcja gęstości rozkładu z zadania 5 listy 8 \( f_X\left(x\right) = \frac{1}{\pi\sqrt{x - x^2}} \):\\
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.8]{./plots/exc3/arcsin.pdf}
+\end{figure}
 
 Widać mocne podobieństwo pomiędzy wykresami, co sugerowałoby dążenie rozkładu \( P_N \) do rozkładu arcusa sinusa z zadania 5.
 Jedną z rzeczy, które najmocniej rzucają się w oczy jest jednak tendencja do przyjmowania przez \( P_N \) granicznych wartości (0 lub 1).
