--- a/Exc4/ZadDom4.tex
+++ b/Exc4/ZadDom4.tex
@@ -123,6 +123,6 @@ proces \textit{nie pamięta} jakie było jego położenie początkowe. Zachowuje
 Nic go nie ciągnie spowrotem do osi \text{OX}.\\
 
 
-Kod zrodlowy implementacji: \href{https://github.com/nskowron/Statistics2024/tree/main/Exc4}{Github repository}
+Kod źródłowy implementacji: \href{https://github.com/nskowron/Statistics2024/tree/main/Exc4}{Github repository}
 
 \end{document}
